webadmin: fix grid header border for FF 52 ESR
In Firefox 52, the background gradient was covering the
border. I fixed this for Firefox in general in commit
7900511, but FF 52 also requires the 'background-clip'
property set to 'padding-box'.

Bug-Url: https://bugzilla.redhat.com/1483863

--- a/frontend/webadmin/modules/gwt-common/src/main/resources/org/ovirt/engine/ui/common/css/TabCellTable.css
+++ b/frontend/webadmin/modules/gwt-common/src/main/resources/org/ovirt/engine/ui/common/css/TabCellTable.css
@@ -7,6 +7,8 @@
 .cellTableHeader {
     padding: 0 0 0 4px;
     text-align: left;
+    background-image: linear-gradient(to bottom, #fafafa 0, #ededed 100%);
+    background-clip: padding-box;
     height: 27px;
     line-height: 28px;
     white-space: nowrap;
